# thanos-github-activity

./: .gitignore  .mcp.json  README.md  config.toml  pyproject.toml
.claude/skills/activity-monitor/: SKILL.md
.claude/skills/pr-leadtime-stats/: SKILL.md
src/activity_monitor/: cli.py  db.py  detect.py  ingest.py  models.py  report.py
tests/: conftest.py  test_cli.py  test_db.py  test_detect.py  test_ingest.py  test_report.py
tests/fixtures/: sample_collection.json
