[project]
name = "activity-monitor"
version = "0.1.0"
description = "チームメンバーの GitHub 活動をモニタリングし、低活動メンバーを検知する"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
activity-monitor = "activity_monitor.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/activity_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
